# vl_jepa

./: .gitignore  main.py  pyproject.toml
src/modules/: y_encoder.py
tests/: test_vision_encoder.py  test_y_encoder.py
