[project]
name = "vl-jepa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "accelerate>=1.12.0",
    "einops>=0.8.2",
    "numpy>=2.4.2",
    "pillow>=12.1.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "black>=26.1.0",
    "flake8>=7.3.0",
    "isort>=7.0.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
